--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowEnvironment.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowEnvironment.java.vm
@@ -3,22 +3,51 @@
 
 package org.robolectric.shadows;
 
-import android.os.Environment;
-import org.robolectric.annotation.Implementation;
-import org.robolectric.annotation.Implements;
-
 import java.io.File;
+import java.util.Map;
+import java.util.HashMap;
+import android.os.Environment;
+import org.robolectric.annotation.Resetter;
+import org.robolectric.annotation.Implements;
+import org.robolectric.annotation.Implementation;
 
 @Implements(Environment.class)
 public class ShadowEnvironment {
-
-  private static final String MEDIA_REMOVED = "removed";
-
-  private static String externalStorageState = MEDIA_REMOVED;
+  private static String externalStorageState = Environment.MEDIA_REMOVED;
+  private static final Map<File, Boolean> STORAGE_EMULATED = new HashMap<>();
+  private static final Map<File, Boolean> STORAGE_REMOVABLE = new HashMap<>();
 
   @Implementation
   public static String getExternalStorageState() {
     return externalStorageState;
+  }
+
+  /**
+   * Non-Android accessor. Sets the return value of {@link #getExternalStorageState()}.
+   *
+   * @param externalStorageState Value to return from {@link #getExternalStorageState()}.
+   */
+  public static void setExternalStorageState(String externalStorageState) {
+    ShadowEnvironment.externalStorageState = externalStorageState;
+  }
+
+  @Implementation
+  public static File getExternalStorageDirectory() {
+    ShadowContext.EXTERNAL_CACHE_DIR.mkdirs();
+    return ShadowContext.EXTERNAL_CACHE_DIR;
+  }
+
+  @Implementation
+  public static File getExternalStoragePublicDirectory(String type) {
+    File f = (type == null) ? ShadowContext.EXTERNAL_FILES_DIR : new File(ShadowContext.EXTERNAL_FILES_DIR, type);
+    f.mkdirs();
+    return f;
+  }
+
+  @Resetter
+  public static void reset() {
+    STORAGE_EMULATED.clear();
+    STORAGE_REMOVABLE.clear();
   }
 
 #if ($apiLevel >= 19)
@@ -33,22 +62,37 @@ public class ShadowEnvironment {
   public static String getExternalStorageState(File path) {
     return externalStorageState;
   }
+
+  @Implementation
+  public static boolean isExternalStorageRemovable(File path) {
+    final Boolean exists = STORAGE_REMOVABLE.get(path);
+    return exists != null ? exists : false;
+  }
+
+  @Implementation
+  public static boolean isExternalStorageEmulated(File path) {
+    final Boolean emulated = STORAGE_EMULATED.get(path);
+    return emulated != null ? emulated : false;
+  }
+
+  /**
+   * Non-Android accessor. Sets the "isRemovable" flag of a particular file.
+   *
+   * @param file Target file.
+   * @param isRemovable True if the filesystem is removable.
+   */
+  public static void setExternalStorageRemovable(File file, boolean isRemovable) {
+    STORAGE_REMOVABLE.put(file, isRemovable);
+  }
+
+  /**
+   * Non-Android accessor. Sets the "isEmulated" flag of a particular file.
+   *
+   * @param file Target file.
+   * @param isEmulated True if the filesystem is emulated.
+   */
+  public static void setExternalStorageEmulated(File file, boolean isEmulated) {
+    STORAGE_EMULATED.put(file, isEmulated);
+  }
 #end
-
-  public static void setExternalStorageState(String externalStorageState) {
-    ShadowEnvironment.externalStorageState = externalStorageState;
-  }
-
-  @Implementation
-  public static File getExternalStorageDirectory() {
-    ShadowContext.EXTERNAL_CACHE_DIR.mkdirs();
-    return ShadowContext.EXTERNAL_CACHE_DIR;
-  }
-
-  @Implementation
-  public static File getExternalStoragePublicDirectory(String type) {
-    File f = (type == null) ? ShadowContext.EXTERNAL_FILES_DIR : new File( ShadowContext.EXTERNAL_FILES_DIR, type );
-    f.mkdirs();
-    return f;
-  }
 }
