--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowCursorWindow.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowCursorWindow.java.vm
@@ -1,17 +1,6 @@
-#set($Integer = 0)
-#set($apiLevel = $Integer.parseInt($apiLevel))
-
-#if ($apiLevel >= 21)
-#set($ptrClass = "long")
-#set($ptrClassBoxed = "Long")
-#else
-#set($ptrClass = "int")
-#set($ptrClassBoxed = "Integer")
-#end
-
 package org.robolectric.shadows;
 
-#if ($apiLevel >= 21)
+#if ($api >= 21)
 import java.util.concurrent.atomic.AtomicLong;
 #else
 import java.util.concurrent.atomic.AtomicInteger;
@@ -269,7 +258,7 @@ public class ShadowCursorWindow {
   }
 
   private static class WindowData {
-#if($apiLevel >= 21)
+#if($api >= 21)
     private final AtomicLong windowPtrCounter = new AtomicLong(0);
 #else
     private final AtomicInteger windowPtrCounter = new AtomicInteger(0);
