--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowMemoryMappedFile.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowMemoryMappedFile.java.vm
@@ -1,10 +1,7 @@
-#set($Integer = 0)
-#set($apiLevel = $Integer.parseInt($apiLevel))
-
 package org.robolectric.shadows;
 
 import libcore.io.BufferIterator;
-#if ($apiLevel >= 21)
+#if ($api >= 21)
 import android.system.ErrnoException;
 #else
 import libcore.io.ErrnoException;
