--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/fakes/BaseCursor.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/fakes/BaseCursor.java.vm
@@ -1,6 +1,3 @@
-#set($Integer = 0)
-#set($apiLevel = $Integer.parseInt($apiLevel))
-
 package org.robolectric.fakes;
 
 import android.content.ContentResolver;
@@ -187,7 +184,7 @@ public class BaseCursor implements Cursor {
     throw new UnsupportedOperationException();
   }
 
-#if ($apiLevel >= 19)
+#if ($api >= 19)
   @Override
   public Uri getNotificationUri() {
     throw new UnsupportedOperationException();
