--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/fakes/RoboSensorManager.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/fakes/RoboSensorManager.java.vm
@@ -1,12 +1,9 @@
-#set($Integer = 0)
-#set($apiLevel = $Integer.parseInt($apiLevel))
-
 package org.robolectric.fakes;
 
 import android.hardware.Sensor;
 import android.hardware.SensorEventListener;
 import android.hardware.SensorManager;
-#if ($apiLevel >= 18)
+#if ($api >= 18)
 import android.hardware.TriggerEventListener;
 #end
 import android.os.Handler;
@@ -25,7 +22,7 @@ public class RoboSensorManager extends SensorManager {
   protected void unregisterListenerImpl(SensorEventListener listener, Sensor sensor) {
   }
 
-#if ($apiLevel >= 19)
+#if ($api >= 19)
   @Override
   protected boolean registerListenerImpl(SensorEventListener listener, Sensor sensor, int delayUs, Handler handler, int maxBatchReportLatencyUs, int reservedFlags) {
     return false;
@@ -42,7 +39,7 @@ public class RoboSensorManager extends SensorManager {
   }
 #end
 
-#if ($apiLevel >= 18)
+#if ($api >= 18)
   @Override
   protected boolean requestTriggerSensorImpl(TriggerEventListener listener, Sensor sensor) {
     return false;
