--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/fakes/RoboWebSettings.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/fakes/RoboWebSettings.java.vm
@@ -1,6 +1,3 @@
-#set($Integer = 0)
-#set($apiLevel = $Integer.parseInt($apiLevel))
-
 package org.robolectric.fakes;
 
 import android.webkit.WebSettings;
@@ -163,7 +160,7 @@ public class RoboWebSettings extends WebSettings {
     loadWithOverviewMode = flag;
   }
 
-#if ($apiLevel >= 17)
+#if ($api >= 17)
   // > API 17
   private boolean mediaPlaybackRequiresUserGesture = true;
 
@@ -265,7 +262,7 @@ public class RoboWebSettings extends WebSettings {
   }
 
 
-#if ($apiLevel >= 21)
+#if ($api >= 21)
   // API 21
   private int mixedContentMode;
 
