--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowAccountManager.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowAccountManager.java.vm
@@ -1,6 +1,3 @@
-#set($Integer = 0)
-#set($apiLevel = $Integer.parseInt($apiLevel))
-
 package org.robolectric.shadows;
 
 import android.accounts.Account;
@@ -317,8 +314,7 @@ public class ShadowAccountManager {
   }
 
   /**
-   * Non-Android accessor consumes and returns the next {@code addAccountOptions} passed to
-   * {@link #addAccount(String, String, String[], android.os.Bundle, android.app.Activity, android.accounts.AccountManagerCallback, android.os.Handler)}.
+   * Non-Android accessor consumes and returns the next {@code addAccountOptions} passed to addAccount.
    *
    * @return the next {@code addAccountOptions}
    */
@@ -331,9 +327,7 @@ public class ShadowAccountManager {
   }
 
   /**
-   * Non-Android accessor returns the next {@code addAccountOptions} passed to
-   * {@link #addAccount(String, String, String[], android.os.Bundle, android.app.Activity, android.accounts.AccountManagerCallback, android.os.Handler)}.
-   * without consuming it.
+   * Non-Android accessor returns the next {@code addAccountOptions} passed to addAccount without consuming it.
    *
    * @return the next {@code addAccountOptions}
    */
@@ -416,7 +410,7 @@ public class ShadowAccountManager {
     addAuthenticator(AuthenticatorDescription.newKey(type));
   }
 
-#if ($apiLevel >= 21)
+#if ($api >= 21)
   private Map<Account, String> previousNames = new HashMap<Account, String>();
   /**
    * Non-android accessor.
