--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowBluetoothAdapter.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowBluetoothAdapter.java.vm
@@ -1,10 +1,7 @@
-#set($Integer = 0)
-#set($apiLevel = $Integer.parseInt($apiLevel))
-
 package org.robolectric.shadows;
 
 import android.bluetooth.BluetoothAdapter;
-#if ($apiLevel >= 18)
+#if ($api >= 18)
 import android.bluetooth.BluetoothAdapter.LeScanCallback;
 #end
 import android.bluetooth.BluetoothDevice;
@@ -22,7 +19,7 @@ public class ShadowBluetoothAdapter {
   private static final int ADDRESS_LENGTH = 17;
 
   private Set<BluetoothDevice> bondedDevices = new HashSet<BluetoothDevice>();
-#if ($apiLevel >= 18)
+#if ($api >= 18)
   private Set<LeScanCallback> leScanCallbacks = new HashSet<LeScanCallback>();
 #end
   private boolean isDiscovering;
@@ -56,7 +53,7 @@ public class ShadowBluetoothAdapter {
     return true;
   }
 
-#if ($apiLevel >= 18)
+#if ($api >= 18)
   @Implementation
   public boolean startLeScan(LeScanCallback callback) {
     return startLeScan(null, callback);
