--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowClipboardManager.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowClipboardManager.java.vm
@@ -1,6 +1,3 @@
-#set($Integer = 0)
-#set($apiLevel = $Integer.parseInt($apiLevel))
-
 package org.robolectric.shadows;
 
 import android.content.ClipData;
@@ -25,7 +22,7 @@ public class ShadowClipboardManager {
 
   @Implementation
   public void setPrimaryClip(ClipData clip) {
-#if ($apiLevel >= 18)
+#if ($api >= 18)
     if (clip != null) {
        clip.prepareToLeaveProcess();
     }
