--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowCursorWrapper.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowCursorWrapper.java.vm
@@ -1,6 +1,3 @@
-#set($Integer = 0)
-#set($apiLevel = $Integer.parseInt($apiLevel))
-
 package org.robolectric.shadows;
 
 import android.content.ContentResolver;
@@ -197,7 +194,7 @@ public class ShadowCursorWrapper implements Cursor {
     wrappedCursor.setNotificationUri(contentResolver, uri);
   }
 
-#if ($apiLevel >= 19)
+#if ($api >= 19)
   @Implementation
   public Uri getNotificationUri() {
     return wrappedCursor.getNotificationUri();
