--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowEnvironment.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowEnvironment.java.vm
@@ -1,6 +1,3 @@
-#set($Integer = 0)
-#set($apiLevel = $Integer.parseInt($apiLevel))
-
 package org.robolectric.shadows;
 
 import java.io.File;
@@ -50,14 +47,14 @@ public class ShadowEnvironment {
     STORAGE_REMOVABLE.clear();
   }
 
-#if ($apiLevel >= 19)
+#if ($api >= 19)
   @Implementation
   public static String getStorageState(File path) {
     return externalStorageState;
   }
 #end
 
-#if ($apiLevel >= 21)
+#if ($api >= 21)
   @Implementation
   public static String getExternalStorageState(File path) {
     return externalStorageState;
