--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowICU.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowICU.java.vm
@@ -1,6 +1,3 @@
-#set($Integer = 0)
-#set($apiLevel = $Integer.parseInt($apiLevel))
-
 package org.robolectric.shadows;
 
 import org.robolectric.annotation.Implementation;
@@ -16,7 +13,7 @@ public class ShadowICU {
     return "en-US";
   }
 
-#if ($apiLevel >= 21)
+#if ($api >= 21)
   @Implementation
   public static String getBestDateTimePattern(String skeleton, Locale locale) {
     return "h:mm a";
@@ -27,5 +24,4 @@ public class ShadowICU {
     return "h:mm a";
   }
 #end
-
 }
