--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowLocaleData.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowLocaleData.java.vm
@@ -1,6 +1,3 @@
-#set($Integer = 0)
-#set($apiLevel = $Integer.parseInt($apiLevel))
-
 package org.robolectric.shadows;
 
 import java.util.Locale;
@@ -37,7 +34,7 @@ public class ShadowLocaleData {
     localeData.longMonthNames = new String[]{"January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December"};
     localeData.shortMonthNames = new String[]{"Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"};
 
-#if ($apiLevel >= 17)
+#if ($api >= 17)
     localeData.tinyMonthNames = new String[]{"J", "F", "M", "A", "M", "J", "J", "A", "S", "O", "N", "D"};
     localeData.tinyStandAloneMonthNames = localeData.tinyMonthNames;
     localeData.tinyWeekdayNames = new String[]{"", "S", "M", "T", "W", "T", "F", "S"};
@@ -62,7 +59,7 @@ public class ShadowLocaleData {
     localeData.mediumTimeFormat = "h:mm:ss a";
     localeData.shortTimeFormat = "h:mm a";
 
-#if ($apiLevel >= 18)
+#if ($api >= 18)
     localeData.timeFormat12 = "h:mm a";
     localeData.timeFormat24 = "HH:mm";
 #end
@@ -80,7 +77,7 @@ public class ShadowLocaleData {
     localeData.perMill = 0x2030;
     localeData.monetarySeparator = '.';
 
-#if ($apiLevel >= 21)
+#if ($api >= 21)
     // Lollipop uses a String
     localeData.minusSign = "-";
 #else
