--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowMessageQueue.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowMessageQueue.java.vm
@@ -1,6 +1,3 @@
-#set($Integer = 0)
-#set($apiLevel = $Integer.parseInt($apiLevel))
-
 package org.robolectric.shadows;
 
 import android.os.Handler;
@@ -33,7 +30,7 @@ public class ShadowMessageQueue {
   @RealObject
   private MessageQueue realQueue;
 
-#if ($apiLevel >= 21)
+#if ($api >= 21)
 #set($ptrClass = "long")
 #set($recycle = "recycleUnchecked")
 #else
