--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowPowerManager.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowPowerManager.java.vm
@@ -1,6 +1,3 @@
-#set($Integer = 0)
-#set($apiLevel = $Integer.parseInt($apiLevel))
-
 package org.robolectric.shadows;
 
 import android.os.PowerManager;
@@ -39,7 +36,7 @@ public class ShadowPowerManager {
     isScreenOn = screenOn;
   }
 
-#if ($apiLevel >= 20)
+#if ($api >= 20)
   @Implementation
   public boolean isInteractive() {
     return isInteractive;
