--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowRenderNode.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowRenderNode.java.vm
@@ -1,10 +1,6 @@
-#set($Integer = 0)
-#set($apiLevel = $Integer.parseInt($apiLevel))
-
 package org.robolectric.shadows;
 
-#if ($apiLevel >= 21)
-
+#if ($api >= 21)
 import android.view.RenderNode;
 import org.robolectric.annotation.Implementation;
 import org.robolectric.annotation.Implements;
