--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowSettings.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowSettings.java.vm
@@ -1,6 +1,3 @@
-#set($Integer = 0)
-#set($apiLevel = $Integer.parseInt($apiLevel))
-
 package org.robolectric.shadows;
 
 import android.content.ContentResolver;
@@ -125,7 +122,7 @@ public class ShadowSettings {
   public static class ShadowSecure extends ShadowSystem {
   }
 
-#if ($apiLevel >= 17)
+#if ($api >= 17)
   @Implements(value = Settings.Global.class, inheritImplementationMethods = true)
   public static class ShadowGlobal extends ShadowSystem {
   }
