--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowStaticLayout.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowStaticLayout.java.vm
@@ -1,6 +1,3 @@
-#set($Integer = 0)
-#set($apiLevel = $Integer.parseInt($apiLevel))
-
 package org.robolectric.shadows;
 
 import android.text.StaticLayout;
@@ -11,7 +8,7 @@ import org.robolectric.annotation.Implements;
 @Implements(StaticLayout.class)
 public class ShadowStaticLayout {
 
-#if ($apiLevel >= 21)
+#if ($api >= 21)
   @Implementation @HiddenApi
   public static int[] nLineBreakOpportunities(String locale, char[] text, int length, int[] recycle) {
     return new int[] {-1};
