--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowWebView.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowWebView.java.vm
@@ -1,6 +1,3 @@
-#set($Integer = 0)
-#set($apiLevel = $Integer.parseInt($apiLevel))
-
 package org.robolectric.shadows;
 
 import android.view.ViewGroup.LayoutParams;
@@ -320,7 +317,7 @@ public class ShadowWebView extends ShadowAbsoluteLayout {
     return lastLoadDataWithBaseURL;
   }
 
-#if ($apiLevel >= 19)
+#if ($api >= 19)
   public static void setWebContentsDebuggingEnabled(boolean enabled) { }
 #end
 
