--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowWindowManagerGlobal.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowWindowManagerGlobal.java.vm
@@ -1,9 +1,6 @@
-#set($Integer = 0)
-#set($apiLevel = $Integer.parseInt($apiLevel))
-
 package org.robolectric.shadows;
 
-#if ($apiLevel >= 17)
+#if ($api >= 17)
 import android.os.Looper;
 import android.view.WindowManagerGlobal;
 import org.robolectric.annotation.Implementation;
