--- a/robolectric/src/test/resources/res/layout/fragment.xml
+++ b/robolectric/src/test/resources/res/layout/fragment.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+<fragment
+      xmlns:android="http://schemas.android.com/apk/res/android"
       android:name="org.robolectric.util.CustomFragment"
       android:id="@+id/my_fragment"
       android:layout_width="match_parent"
