--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowContextImpl.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowContextImpl.java.vm
@@ -3,6 +3,7 @@ package org.robolectric.shadows;
 import android.accounts.AccountManager;
 import android.content.Context;
 import android.os.Build;
+import android.os.FileUtils;
 import android.os.Handler;
 import android.view.Display;
 import android.view.accessibility.AccessibilityManager;
@@ -13,10 +14,14 @@ import org.robolectric.annotation.RealObject;
 import org.robolectric.util.ReflectionHelpers;
 import org.robolectric.util.ReflectionHelpers.ClassParameter;
 
+import java.io.File;
+
 import java.util.HashMap;
 import java.util.Map;
 
+import static org.robolectric.internal.Shadow.directlyOn;
 import static org.robolectric.internal.Shadow.newInstanceOf;
+import static org.robolectric.util.ReflectionHelpers.ClassParameter.from;
 
 @Implements(className = ShadowContextImpl.CLASS_NAME)
 public class ShadowContextImpl extends ShadowContext {
@@ -65,6 +70,27 @@ public class ShadowContextImpl extends ShadowContext {
 #if ($api >= 19)
     SYSTEM_SERVICE_MAP.put(Context.PRINT_SERVICE, "android.print.PrintManager");
 #end
+  }
+
+  @Implementation
+  public File validateFilePath(String name, boolean createDirectory) {
+    File dir;
+    File f = new File(name);
+
+    if (f.isAbsolute()) {
+      dir = f.getParentFile();
+    } else {
+      dir = directlyOn(realObject, "android.app.ContextImpl", "getDatabasesDir");
+      f = directlyOn(realObject, "android.app.ContextImpl", "makeFilename", from(File.class, dir), from(String.class, name));
+    }
+
+    if (createDirectory && !dir.isDirectory() && dir.mkdir()) {
+      FileUtils.setPermissions(dir.getPath(),
+          FileUtils.S_IRWXU|FileUtils.S_IRWXG|FileUtils.S_IXOTH,
+          -1, -1);
+    }
+
+    return f;
   }
 
   private Map<String, Object> systemServices = new HashMap<String, Object>();
