--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowSQLiteConnection.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowSQLiteConnection.java.vm
@@ -329,7 +329,7 @@ public class ShadowSQLiteConnection {
 #end
     private final Map<$ptrClassBoxed, SQLiteStatement> statementsMap = new ConcurrentHashMap<>();
     private final Map<$ptrClassBoxed, SQLiteConnection> connectionsMap = new ConcurrentHashMap<>();
-    private final ExecutorService dbExecutor = Executors.newSingleThreadExecutor();
+    private ExecutorService dbExecutor = Executors.newSingleThreadExecutor();
 
     public SQLiteConnection getConnection(final $ptrClass pointer) {
       SQLiteConnection connection = connectionsMap.get(pointer);
@@ -406,6 +406,8 @@ public class ShadowSQLiteConnection {
       for ($ptrClass connectionPtr : connectionsMap.keySet()) {
         close(connectionPtr);  
       }
+      dbExecutor.shutdown();
+      dbExecutor = Executors.newSingleThreadExecutor();
       connectionsMap.clear();
       statementsMap.clear();
     }
