--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowSQLiteConnection.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowSQLiteConnection.java.vm
@@ -1,5 +1,6 @@
 package org.robolectric.shadows;
 
+import java.util.concurrent.TimeUnit;
 #if ($api >= 21)
 import java.util.concurrent.atomic.AtomicLong;
 #else
@@ -407,6 +408,11 @@ public class ShadowSQLiteConnection {
         close(connectionPtr);  
       }
       dbExecutor.shutdown();
+      try {
+        dbExecutor.awaitTermination(30, TimeUnit.SECONDS);
+      } catch (InterruptedException e) {
+        throw new RuntimeException(e);
+      }
       dbExecutor = Executors.newSingleThreadExecutor();
       connectionsMap.clear();
       statementsMap.clear();
