--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowAssetManager.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowAssetManager.java.vm
@@ -4,8 +4,10 @@ import android.content.res.AssetFileDescriptor;
 import android.content.res.AssetManager;
 import android.content.res.Resources;
 import android.content.res.XmlResourceParser;
+import android.os.ParcelFileDescriptor;
 import android.util.TypedValue;
 import java.io.ByteArrayInputStream;
+import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.util.HashMap;
@@ -171,6 +173,13 @@ public final class ShadowAssetManager {
   @Implementation
   public final InputStream open(String fileName, int accessMode) throws IOException {
     return appManifest.getAssetsDirectory().join(fileName).getInputStream();
+  }
+
+  @Implementation
+  public final AssetFileDescriptor openFd(String fileName) throws IOException {
+    File file = new File(appManifest.getAssetsDirectory().join(fileName).getPath());
+    ParcelFileDescriptor parcelFileDescriptor = ParcelFileDescriptor.open(file, ParcelFileDescriptor.MODE_READ_ONLY);
+    return new AssetFileDescriptor(parcelFileDescriptor, 0, file.length());
   }
 
   @Implementation
